# StreamActions

./: .editorconfig  .gitattributes  .gitignore  .vsconfig  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CodeMaid.config  Directory.Packages.props  LICENSE  README.md  SECURITY.md  StreamActions-Bot.sln  StreamActions.dic  StreamActions.licenseheader  StreamActions.sln  StreamActions.sln.licenseheader  StreamActions.sln.vsspell  StreamActions.vcmd  StreamActions.vsext  app.js  en-US.dic  package-lock.json  package.json  patch.diff  patch_skip_iso8601.diff  test_jwt.sh  update-issues.yml
.github/: dependabot.yml  pull_request_template.md
Diff/: Diff.py  Diff.pyproj  DocParserFinder.py  ETagFinder.py  Hash.py  StripData.py  pyproject.toml
StreamActions-Bot/: BotConsole.cs  Extensions.cs  GlobalSuppressions.cs  Program.cs  Scheduler.cs  StreamActions-Bot.csproj  StreamActions-Bot.csproj.vsspell  StreamActions-Bot.licenseheader  StreamActions.ruleset  StreamActionsTypeExtensions.cs  TwitchLibClient.cs  TwitchLibPubSub.cs  TwitchMessageCache.cs  WebSocketServer.cs
StreamActions.Common/: StreamActions.Common.csproj  StreamActionsTypeExtensions.cs  Util.cs
StreamActions.Common.Tests/: GlobalSuppressions.cs  IsValidHexColorTests.cs  StreamActions.Common.Tests.csproj  Usings.cs  UtilTests.cs
TldRegexUpdater/: .gitignore  TldRegexUpdater.licenseheader  TldRegexUpdater.py  TldRegexUpdater.pyproj  pyproject.toml  requirements.txt  tlds-anti-workaround-replacements.txt  tlds-anti-workaround-tlds.txt
TldRegexUpdater/env/Scripts/: activate  activate.bat
(+554 files in other folders)
