[project]
name = "tldregexupdater"
version = "1.0.0"
description = "Generates the TLD portion of the link detection RegEx to be used in chat moderation methods, using the latest TLD list from IANA"
license = "AGPL-3.0-or-later"
requires-python = ">=3.13"
dependencies = [
    "idna>=3.4",
    "requests>=2.30.0",
]
